--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,5 +11,8 @@
   <ion-tab title="关于" icon="icon ion-search" href="#/tab/about">
     <ion-nav-view name="about-tab"></ion-nav-view>
   </ion-tab>
+  <ion-tab title='退出' icon="icon ion-log-out">
+  </ion-tab>
+
 
 </ion-tabs>
